# fwdop

./: LICENSE  README.md  g_fwd_op.py  pyproject.toml  setup.cfg  setup.py
core/: __init__.py  g_fwd_op.py
demos/: M1_mesh.vtu  M1_mesh_metadata.json  M1_sp_G_mat.npz  inverse_multiple_ray.ipynb  inverse_single_ray.ipynb  model_variations.ipynb  moon_model_testing.ipynb  plotting_1d_function.py  ray_and_point_generation.py  test.py  test_1D.py  test_functions.py  test_inverse.py  test_multiray_inverse.py  test_operations.py
fwdop/: __init__.py  g_fwd_op.py
fwdop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fwdop/aux/: scalar_field.py
tests/: test_gfwdop.py  test_import.py
