[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fwdop"
version = "0.1.0"
description = "Lightweight forward-operator utilities for SensRay"
authors = [ { name = "SensRay contributors" } ]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.10.0",
    "pygeoinf>=1.3.1",
]
